--- a/src/components/uploadimage.css
+++ b/src/components/uploadimage.css
@@ -6,12 +6,12 @@
 
 .upload-icon{
     position: fixed;
-     left:25%; 
+     left:18%; 
      bottom: 40px; 
      height: 40px; 
      width: 40px;
    background-color: white;
-    border-radius: 10px; 
+    border-radius: 50%; 
     padding: 5px;
     box-shadow:  rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px
 }
